--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ a {
 
 /* section 2 */
 
-.container-2 {
+.container-2-5 {
     height: 1200px;
     flex-direction: column;
 }
@@ -145,4 +145,31 @@ a {
     flex-basis: 40%;
     background-color: gold;
     border: 1px dashed black;
+}
+
+/* section 5 */
+
+.titolo{
+    flex-basis: 10%;
+    background-color: gold;
+    border: 1px dashed black;
+}
+
+.griglia{
+    flex-basis: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 50px;
+    background-color: crimson;
+    border: 1px dashed black;
+}
+
+
+.operazioni {
+    width: calc((100% - 100px) / 3);
+    display: flex;
+    flex-direction: column;
+    background-color: beige;
+    border: 1px dashed black;
+    margin-bottom: 80px;
 }
