--- a/style.css
+++ b/style.css
@@ -6,34 +6,6 @@
     font-family: "Open Sans", serif;
 }
 
-/**********HEADER**********/
-
-header {
-    position: sticky;
-    top: 0px;
-    z-index: 3;
-    background-color: #ffffff;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 20px;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    gap: 40px;
-}
-
-a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 18px;
-}
-
 /* common */
 
 .container {
@@ -42,6 +14,48 @@ a {
     margin: 0 auto;
     background-color: rgb(20, 154, 154);
     border: 2px dashed blue;
+}
+
+a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 18px;
+}
+
+.btn{
+    background-color: #0061fe;
+    padding: 15px;
+    color: white;
+    display: inline-block;
+}
+
+.btn:hover{
+    filter: brightness(1.4);
+}
+
+/**********HEADER**********/
+
+header {
+   
+    position: sticky;
+    top: 0px;
+    z-index: 3;
+    background-color: #ffffff;
+    box-shadow: 0 1px 2px 0px #bbbbbb;
+    padding: 30px;
+}
+
+header>div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header ul {
+    display: flex;
+    list-style: none;
+    gap: 40px;
+    align-items: center;
 }
 
 /* jumbotron */
@@ -54,37 +68,36 @@ a {
 .container-jumbo {
     display: flex;
     flex-direction: column;
-    width: 1200px;
-    height: 680px;
+    width: 1190px;
     margin: 0 auto;
-    border: 1px dashed black;
-    background-color: green;
 }
 
-.jumbo-up {
-    background-color: pink;
-    flex-basis: 40%;
-    border: 1px dashed black;
+h1{
+    font-size: 80px;
 }
 
 .jumbo-down {
-    flex-basis: 60%;
     display: flex;
-    border: 1px dashed black;
+    position: relative;
+    top: 100px;
 }
 
-.jumbo-down :first-child {
-    flex-basis: 30%;
-    background-color: yellow;
-    border: 1px dashed black;
+.jumbo-down div:first-child {
+    max-width:30%;
+}
+
+i{
+    font-size: medium;
+    background-color: #000000;
 }
 
 .jumbo-down div+div {
-    flex-basis: 70%;
-    background-color: aqua;
-    border: 1px dashed black;
+    max-width: 70%;
 }
 
+.jumbo-down div+div img{
+width: 100%;
+}
 /* section 2 */
 
 .container-2-5 {
