--- a/style.css
+++ b/style.css
@@ -29,12 +29,6 @@ ul{
 .btn:hover{
     filter: brightness(1.4);
 }
-
-
-.container-2-5 {
-    height: 1200px;
-    flex-direction: column;
-}
 /**********HEADER**********/
 
 header {
@@ -103,8 +97,7 @@ width: 100%;
 /* section 2 */
 
 .container-2{
-    flex-direction: column;
-    
+    flex-direction: column; 
 }
 
 .fatturazione{
@@ -255,32 +248,39 @@ h4{
 }
 
 /* section 5 */
+.container-5{
+    flex-direction: column; 
+}
 
 .titolo{
-    flex-basis: 10%;
-    background-color: gold;
-    border: 1px dashed black;
+    font-size: 40px;
+    font-weight: bold;
+    padding-bottom: 50px;
+    /* flex-basis: 10%; */
 }
 
 .griglia{
-    flex-basis: 90%;
     display: flex;
     flex-wrap: wrap;
     column-gap: 50px;
-    background-color: crimson;
-    border: 1px dashed black;
 }
 
-
-.operazioni {
+.operazione {
     width: calc((100% - 100px) / 3);
     display: flex;
     flex-direction: column;
-    background-color: beige;
-    border: 1px dashed black;
     margin-bottom: 80px;
 }
 
+.operazione div img{
+max-width: 100%;
+}
+
+h5{
+    font-weight: bold;
+    font-size: 25px;
+    padding-bottom: 35px;
+}
 /* section 6 */
 
 .section-6{
