--- a/style.css
+++ b/style.css
@@ -315,24 +315,38 @@ footer{
 }
 
 .container-footer{
+    display: flex;
+    margin: 0 auto;
     flex-direction: column;
     height: 450px;
+    width: 1200px;
 }
 
 .vari{
-    flex-basis: 75%;
-    border: 1px dashed white;
     display: flex;
     gap: 100px;
 }
 
 .vari > div{
-    width: calc((100% - 400px) / 5);
-    background-color: beige;
-    border: 1px dashed white;
+    width: calc((100% - 280px) / 5);
 }
 
-.lingua{
-    flex-basis: 25%;
-    border: 1px dashed white;
+h6{
+    font-size: 20px;
+    margin-bottom: 30px;
+    color: white;
+}
+
+.vari div ul li{
+    font-size: 15px;
+    padding: 10px 0;
+    color: white;
+}
+
+.lingua ul{
+    padding: 40px 0;
+    display: flex;
+    gap: 10px;
+    text-align: center;
+    color: white;
 }
